# grc-toolkit

./: .env.example  .gitignore  .replit  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  GRC_Toolkit_Technical_Documentation.docx  HITRUST.txt  README.md  azure-australia-risk-assessment-final.docx  azure-australia-risk-assessment.docx  azure-australia-summary.docx  docker-compose.yaml  lambda_handler.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-replit.txt  requirements.txt  setup.py
.claude/: launch.json
.github/workflows/: ci.yaml  compliance-gate.yaml
api/: __init__.py  deps.py  main.py  schemas.py  security.py
api/routers/: ai_reasoning.py  assessments.py  audit_collab.py  auth.py  dashboard.py  data_silos.py  evidence.py  exports.py  frameworks.py  integrations.py  monitoring.py  personnel.py  policies.py  questionnaires.py  risk.py  settings.py  ssp.py  tasks.py  tool_config.py  trust.py  vendors.py
config/: crosswalks.yaml  fedramp.yaml  frameworks.yaml  gdpr.yaml  iso_27001.yaml  iso_42001.yaml  nist_800_53.yaml  settings.yaml  soc2.yaml  unified_controls.yaml
db/: __init__.py  models.py  repository.py  session.py
demo_exports/: framework_mappings.json  index.html
demo_exports/executive_summaries/: executive_summary_cmmc_l2.txt  executive_summary_hipaa.txt  executive_summary_iso27001.txt  executive_summary_nist_800_53.txt  executive_summary_soc2.txt
demo_exports/poam/: poam_cmmc_l2.json  poam_cmmc_l2.txt  poam_hipaa.json  (+7 more)
docs/: architecture-diagram.html  technical_docs.html
frontend/: index.html  package-lock.json  package.json
modules/: __init__.py  ai_reasoning.py  control_assessor.py  evidence_collector.py  framework_mapper.py  models.py  notify.py  report_generator.py  risk_engine.py  vendor_monitor.py
scripts/: generate_demo_exports.py  generate_docs.js  html_to_pdf.js  run_assessment.py  run_collection.py  run_risk_analysis.py  seed_demo_data.py
static/: index.html
tests/: test_api.py  test_connectors.py  test_control_assessor.py  test_db.py  test_evidence_collector.py  test_exports.py  test_models.py  test_reports_notify.py  test_risk_engine.py  test_vendor_monitor.py
(+60 files in other folders)
