[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "grc-toolkit"
version = "0.3.0"
description = "Automated GRC evidence collection, compliance assessment, and risk analysis toolkit"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["modules", "api", "db"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
no_implicit_optional = false
disable_error_code = ["import-untyped"]
